test/fail/if_const.v3
//@execute 0=4
type T(a: bool) #unboxed;

def main(a: int) -> int {
	var x = T(false);
	var y = if (x.a, 1, 2);
	return y * 2;
}